[[bin]]
name = "1149"
path = "problems/1149/main.rs"

[[bin]]
name = "2667"
path = "problems/2667/main.rs"

[[bin]]
name = "2739"
path = "problems/2739/main.rs"

[[bin]]
name = "3474"
path = "problems/3474/main.rs"

[[bin]]
name = "7568"
path = "problems/7568/main.rs"

[[bin]]
name = "7576"
path = "problems/7576/main.rs"

[package]
name = "ps-baekjoon"
version = "0.1.0"
edition = "2018"

[dependencies]
